PRESIDECMS-1401 wrap the asset name to avoid layout break: style thumbnail to vertical align

--- a/system/assets/css/admin/specific/assetmanager/index/listingTable.less
+++ b/system/assets/css/admin/specific/assetmanager/index/listingTable.less
@@ -24,16 +24,20 @@
 					.asset-title {
 						display: inline-block;
 						width  : 80%;
+						height : 100%;
 					}
 
 					.asset-preview {
 						width   : 60px;
-						display : inline-block;
+						height  : 100%;
+						display : flex;
 						float   : left;
 
 						img {
 							max-width  : 48px;
 							max-height : 32px;
+							display    : inline-block;
+							margin     : auto 0;
 						}
 					}
 				}
@@ -41,6 +45,7 @@
 				.asset-name {
 					word-wrap: break-word;
 					max-width: 250px;
+					height   : 100%;
 				}
 
 				&:first-child td {
